--- a/alpinulina.css
+++ b/alpinulina.css
@@ -6,3 +6,9 @@ button.vfrc-launcher {
 button.vfrc-launcher:hover {
   background-color: #c4ecf3 !important;
 }
+
+button.vfrc-launcher img {
+  width: 100% !important;
+  heigth: 100% !important;
+  border-radius: 100% !important;
+}
