--- a/alpinulina.css
+++ b/alpinulina.css
@@ -9,6 +9,6 @@ button.vfrc-launcher:hover {
 
 button.vfrc-launcher img {
   width: 100% !important;
-  heigth: 100% !important;
+  height: 100% !important;
   border-radius: 100% !important;
 }
